--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,7 +19,7 @@ jobs:
           node-version: '20'
 
       - name: Instalar dependencias
-        run: npm ci
+        run: npm install
 
       - name: Build del proyecto
         run: npm run build
