--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -3,14 +3,15 @@ name: Despliegue Continuo
 on:
   push:
     branches:
-      - deploy
+      - main
 
 jobs:
-  deploy:
+  build:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout del código
+        uses: actions/checkout@v3
 
       - name: Setup Node.js
         uses: actions/setup-node@v3
@@ -20,14 +21,5 @@ jobs:
       - name: Instalar dependencias
         run: npm install
 
-      - name: Build
+      - name: Ejecutar build
         run: npm run build
-
-      - name: Setup SSH
-        uses: webfactory/ssh-agent@v0.5.4
-        with:
-          ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
-
-      - name: Desplegar via SSH
-        run: |
-          rsync -avz --delete ./dist/ user@tu-servidor.com:/var/www/barberia/
